--- a/css/index.css
+++ b/css/index.css
@@ -36,15 +36,19 @@ body {
   transition: all 0.5s;
 }
 .cart_change a span {
-  color: #ff6700 !important;
+  color: #424242 !important;
   transition: all 0.5s;
 }
 .cart_det_change {
   height: 100px !important;
   transition: all 0.5s;
 }
-.download_change {
+.download_out {
   height: 148px !important;
+  transition: all 0.5s;
+}
+.download_in {
+  height: 0 !important;
   transition: all 0.5s;
 }
 .area_change {
@@ -83,6 +87,52 @@ body {
   margin-left: 20px;
   vertical-align: middle;
 }
+.nav_content_out {
+  height: 229px !important;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  border-top: 1px solid #e0e0e0;
+  transition: all 0.4s;
+}
+.nav_content_in {
+  height: 0 !important;
+  transition: all 0.4s;
+  border: 0;
+}
+.search_inpt_focus {
+  border: 1px solid #ff6700 !important;
+  transition: all 0.4s;
+}
+.sub_focus {
+  border-top: 1px solid #ff6700 !important;
+  border-right: 1px solid #ff6700 !important;
+  border-bottom: 1px solid #ff6700 !important;
+  border-left: 0 !important;
+  transition: all 0.4s;
+}
+.search_inpt_leave {
+  border: 1px solid #e0e0e0 !important;
+  transition: all 0.4s;
+}
+.sub_leave {
+  border-top: 1px solid #e0e0e0 !important;
+  border-right: 1px solid #e0e0e0 !important;
+  border-bottom: 1px solid #e0e0e0 !important;
+  border-left: 0 !important;
+  transition: all 0.4s;
+}
+.suggest_out {
+  height: 241px !important;
+  border-top: 0;
+  border-right: 1px solid #ff6700;
+  border-bottom: 1px solid #ff6700;
+  border-left: 1px solid #ff6700;
+  transition: all 0.4s;
+}
+.suggest_in {
+  height: 0 !important;
+  border-bottom: 0 !important;
+  transition: all 0.4s;
+}
 .header {
   width: 100%;
   height: 40px;
@@ -96,7 +146,7 @@ body {
 .header .top span {
   color: #424242;
   font-size: 12px;
-  margin: 0 5px;
+  margin: 0 7px;
 }
 .header .top .left {
   height: 100%;
@@ -112,6 +162,9 @@ body {
 .header .top .left li a {
   color: #b0b0b0;
   font-size: 12px;
+}
+.header .top .left li a:hover {
+  color: #fff;
 }
 .header .top .left li .download {
   position: absolute;
@@ -163,6 +216,9 @@ body {
   color: #b0b0b0;
   font-size: 12px;
 }
+.header .top .right ul li a:hover {
+  color: #fff;
+}
 .header .top .right ul .cart {
   width: 120px;
   height: 40px;
@@ -186,6 +242,7 @@ body {
 }
 .header .top .right ul .cart a .cart_detail .content {
   position: absolute;
+  z-index: 4;
   top: 40px;
   right: 0;
   background-color: #fff;
@@ -207,14 +264,16 @@ body {
   margin: 0;
   vertical-align: middle;
 }
-.main_top {
+.main_top_out {
+  position: relative;
   background-color: #fff;
-  z-index: -2;
+  padding-bottom: 26px;
+}
+.main_top_out .main_top {
   width: 1226px;
   height: 100px;
-  line-height: 100px;
 }
-.main_top .logo_pic {
+.main_top_out .main_top .logo_pic {
   float: left;
   margin-top: 22px;
   width: 56px;
@@ -222,54 +281,134 @@ body {
   background: url(../images/logo-mi2.png);
   background-size: 56px;
 }
-.main_top .nav {
+.main_top_out .main_top .nav {
   float: left;
   margin-left: 175px;
 }
-.main_top .nav ul {
+.main_top_out .main_top .nav ul {
   display: flex;
   width: 628px;
   height: 100%;
+  line-height: 100px;
   justify-content: space-between;
 }
-.main_top .nav ul li a {
+.main_top_out .main_top .nav ul li a {
   color: #333;
 }
-.main_top .search {
+.main_top_out .main_top .nav ul li a:hover {
+  color: #ff6700;
+}
+.main_top_out .main_top .nav ul li a .nav_ph_content {
+  position: absolute;
+  top: 100px;
+  left: 0;
+  z-index: 99;
+  width: 1903px;
+  height: 0;
+  background-color: #fff;
+  overflow: hidden;
+}
+.main_top_out .main_top .nav ul li a .nav_ph_content div {
+  display: flex;
+}
+.main_top_out .main_top .nav ul li a .nav_ph_content div .one {
+  display: flex;
+  padding-top: 25px;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  width: 16.66%;
+  text-align: center;
+}
+.main_top_out .main_top .nav ul li a .nav_ph_content div .one img {
+  width: 160px;
+  height: 110px;
+  margin-bottom: 16px;
+}
+.main_top_out .main_top .nav ul li a .nav_ph_content div .one p,
+.main_top_out .main_top .nav ul li a .nav_ph_content div .one span {
+  display: inline-block;
+  width: 180px;
+  height: auto;
+  line-height: 1.6;
+  font-size: 12px;
+}
+.main_top_out .main_top .nav ul li a .nav_ph_content div .one span {
+  color: #333;
+}
+.main_top_out .main_top .nav ul li a .nav_ph_content div .one p {
+  color: #ff6700;
+}
+.main_top_out .main_top .search {
+  position: relative;
   margin-top: 25px;
   float: right;
 }
-.main_top .search .text {
-  padding: 5px;
+.main_top_out .main_top .search .search_div {
+  padding: 10px;
   float: left;
-  width: 223px;
+  width: 245px;
   height: 48px;
+  line-height: 28px;
+  font-size: 16px;
+  color: #757575;
+}
+.main_top_out .main_top .search .search_inpt {
+  position: absolute;
+  background: rgba(0, 0, 0, 0);
+  top: 0;
+  left: 0;
+  padding: 10px;
+  width: 245px;
+  height: 50px;
   outline: none;
   color: #757575;
+  font-size: 16px;
   border: 1px solid #e0e0e0;
 }
-.main_top .search .sub {
+.main_top_out .main_top .search .sub {
   float: left;
-  width: 48px;
-  height: 48px;
-  border: 1px solid #e0e0e0;
-  background-color: #fff;
+  width: 50px;
+  height: 50px;
+  border-top: 1px solid #e0e0e0;
+  border-right: 1px solid #e0e0e0;
+  border-bottom: 1px solid #e0e0e0;
   border-left: 0;
+  background-color: #fff;
   font-family: iconfont;
   font-size: 24px;
   font-weight: 800;
   color: #616161;
 }
-.main_top .search .sub:hover {
+.main_top_out .main_top .search .sub:hover {
   color: #fff;
   background-color: #ff6700;
   transition: all 0.3s;
 }
-.banner_area {
+.main_top_out .main_top .search .suggest {
+  position: absolute;
+  z-index: 3;
+  top: 50px;
+  left: 0;
+  width: 245px;
+  height: 0;
+  overflow: hidden;
+  background-color: #fff;
+}
+.main_top_out .main_top .search .suggest ul li {
+  padding-left: 10px;
+  height: 29.87px;
+  line-height: 29.87px;
+}
+.main_top_out .main_top .search .suggest ul li a {
+  font-size: 12px;
+  color: #757575;
+}
+.main_top_out .banner_area {
   width: 1226px;
   position: relative;
 }
-.banner_area .left {
+.main_top_out .banner_area .left {
   position: absolute;
   top: 0;
   left: 0;
@@ -279,86 +418,86 @@ body {
   background-color: rgba(105, 101, 101, 0.6);
   z-index: 2;
 }
-.banner_area .left > ul > li:hover {
+.main_top_out .banner_area .left > ul > li:hover {
   background-color: #ff6700;
 }
-.banner_area .left li {
+.main_top_out .banner_area .left li {
   position: relative;
   height: 42px;
   line-height: 42px;
   padding-left: 30px;
 }
-.banner_area .left li a {
+.main_top_out .banner_area .left li a {
   color: #fff;
   font-size: 14px;
 }
-.banner_area .left li a span {
+.main_top_out .banner_area .left li a span {
   position: absolute;
   right: 20px;
 }
-.banner_area .right {
+.main_top_out .banner_area .right {
   position: relative;
 }
-.banner_area .right .swiper {
+.main_top_out .banner_area .right .swiper {
   position: relative;
   top: 0;
   left: 0;
   width: 1226px;
   height: 460px;
 }
-.banner_area .right .swiper .swiper-button-prev {
+.main_top_out .banner_area .right .swiper .swiper-button-prev {
   position: absolute;
   left: 244px;
 }
-.banner_area .right .swiper .swiper-pagination {
+.main_top_out .banner_area .right .swiper .swiper-pagination {
   position: absolute;
   width: 400px;
   left: auto;
   right: 30px;
   bottom: 20px;
 }
-.banner_area .right .swiper .swiper-pagination .swiper-pagination-bullet {
+.main_top_out .banner_area .right .swiper .swiper-pagination .swiper-pagination-bullet {
   width: 10px;
   height: 10px;
   border: 2px solid rgba(0, 0, 0, 0.4);
   background: hsla(0, 0%, 100%, 0.4);
 }
-.banner_area .banner_bot {
+.main_top_out .banner_area .banner_bot {
   margin-top: 14px;
   display: flex;
   justify-content: space-between;
 }
-.banner_area .banner_bot .ban_l {
+.main_top_out .banner_area .banner_bot .ban_l {
   float: left;
   padding: 3px;
   width: 234px;
   height: 170px;
   background-color: #5f5750;
 }
-.banner_area .banner_bot .ban_l ul li {
+.main_top_out .banner_area .banner_bot .ban_l ul li {
   position: relative;
   float: left;
   padding: 18px 4px 0 4px;
   width: 76px;
   height: 82px;
 }
-.banner_area .banner_bot .ban_l ul li a {
+.main_top_out .banner_area .banner_bot .ban_l ul li a {
   text-align: center;
   margin-top: 18px;
   color: #fff;
   opacity: 0.7;
 }
-.banner_area .banner_bot .ban_l ul li a img {
+.main_top_out .banner_area .banner_bot .ban_l ul li a img {
   position: relative;
   top: 0;
   left: 23px;
   width: 24px;
   height: 24px;
 }
-.banner_area .banner_bot .ban_l ul li a div {
+.main_top_out .banner_area .banner_bot .ban_l ul li a div {
   font-size: 12px;
 }
-.banner_area .banner_bot .ban_l ul li a::before {
+.main_top_out .banner_area .banner_bot .ban_l ul li a::before {
   position: absolute;
   content: "";
   background: #665e57;
@@ -367,7 +506,7 @@ body {
   width: 64px;
   height: 1px;
 }
-.banner_area .banner_bot .ban_l ul li a::after {
+.main_top_out .banner_area .banner_bot .ban_l ul li a::after {
   position: absolute;
   content: "";
   background: #665e57;
@@ -376,19 +515,19 @@ body {
   width: 1px;
   height: 70px;
 }
-.banner_area .banner_bot .ban_r {
+.main_top_out .banner_area .banner_bot .ban_r {
   display: flex;
   justify-content: space-between;
   margin-left: 14px;
   float: left;
   flex: 1;
 }
-.banner_area .banner_bot .ban_r a {
+.main_top_out .banner_area .banner_bot .ban_r a {
   display: inline-block;
   width: 316px;
   height: 170px;
 }
-.banner_area .banner_bot .ban_r a img {
+.main_top_out .banner_area .banner_bot .ban_r a img {
   width: 316px;
 }
 .main .ad {
@@ -413,6 +552,24 @@ body {
   font-size: 16px;
   line-height: 58px;
   color: #424242;
+}
+.main .items .items_top a i {
+  width: 12px;
+  height: 12px;
+  padding: 4px;
+  font-size: 12px;
+  margin-left: 8px;
+  background-color: #b0b0b0;
+  color: #fff;
+  border-radius: 50%;
+}
+.main .items .items_top a:hover {
+  color: #ff6700 !important;
+  transition: all 0.6s;
+}
+.main .items .items_top a:hover i {
+  background-color: #ff6700;
+  transition: all 0.6s;
 }
 .main .items_bot {
   display: flex;
