--- a/css/index.css
+++ b/css/index.css
@@ -169,7 +169,7 @@ body {
 .header .top .left li .download {
   position: absolute;
   height: 40px;
-  width: 100%;
+  width: 124px;
   top: 40px;
   left: 75%;
 }
@@ -303,7 +303,7 @@ body {
   top: 100px;
   left: 0;
   z-index: 99;
-  width: 1903px;
+  width: 100vw;
   height: 0;
   background-color: #fff;
   overflow: hidden;
