--- a/less/index.less
+++ b/less/index.less
@@ -192,7 +192,7 @@ body {
                 .download {
                     position: absolute;
                     height: 40px;
-                    width: 100%;
+                    width: 124px;
                     top: 40px;
                     left: 75%;
 
@@ -357,7 +357,7 @@ body {
                             top: 100px;
                             left: 0;
                             z-index: 99;
-                            width: 1903px;
+                            width: 100vw;
                             height: 0;
                             background-color: #fff;
                             overflow: hidden;
